Drasticly reduce time to get node connections.