@@ -27,8 +27,10 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.net.URI;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @RestController
@@ -51,8 +53,16 @@ public class TopicSubtopics {
     @Operation(summary = "Gets all connections between topics and subtopics")
     @Transactional(readOnly = true)
     public List<TopicSubtopicIndexDocument> index() {
-        return nodeConnectionRepository.findAllIncludingParentAndChild().stream().map(TopicSubtopicIndexDocument::new)
-                .collect(Collectors.toList());
+        final List<TopicSubtopicIndexDocument> listToReturn = new ArrayList<>();
+        var ids = nodeConnectionRepository.findAllIds();
+        final var counter = new AtomicInteger();
+        ids.stream().collect(Collectors.groupingBy(i -> counter.getAndIncrement() / 1000)).values().forEach(idChunk -> {
+            final var connections = nodeConnectionRepository.findByIds(idChunk);
+            var dtos = connections.stream().map(TopicSubtopicIndexDocument::new).toList();
+            listToReturn.addAll(dtos);
+        });
+
+        return listToReturn;
     }
 
     @GetMapping("/page")
